[package]
name = "swap"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "swap"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
pythnet-sdk = "2.3.1"
pyth-solana-receiver-sdk = { path = "../../pyth-crosschain/target_chains/solana/pyth_solana_receiver_sdk" }
solana-security-txt = "1.1.1"